# cpp-starter-wordle

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  math.cpp  wordle.cpp
test/: CMakeLists.txt  test1.cpp  wordleTest.cpp
